--- a/example.config.yml
+++ b/example.config.yml
@@ -13,17 +13,20 @@ domain_prometheus: 'prometheus'  # to access prometheus via: http://prometheus.h
 pihole_enable: true
 pihole_hostname: pihole
 pihole_timezone: America/Chicago
-pihole_password: "change-this-password"
+pihole_password: "{{ lookup('ansible.builtin.env', 'PIHOLE_PASS') }}"
+pihole_secondary_dns: 1.1.1.1
 
 # Internet monitoring configuration.
 monitoring_enable: true
-monitoring_grafana_admin_password: "admin"
-monitoring_speedtest_interval: 60m
+monitoring_grafana_admin_password: "{{ lookup('ansible.builtin.env', 'GRAFANA_PASS') }}"
+monitoring_speedtest_interval: 15m
 monitoring_ping_interval: 5s
 monitoring_ping_hosts:  # [URL];[HUMAN_READABLE_NAME]
-  - http://www.google.com/;google.com
-  - https://github.com/;github.com
+  - https://www.amazon.com/;amazon.com
   - https://www.apple.com/;apple.com
+  - https://github.com/;github.com
+  - http://www.google.com/;google.com
+  - https://www.youtube.com/;youtube.com
 
 # Prometheus configuration.
 prometheus_monitor_prometheus: false
@@ -35,7 +38,7 @@ prometheus_extra_scrape_configs: ''
 shelly_plug_enable: false
 shelly_plug_hostname: my-shelly-plug-host-or-ip
 shelly_plug_http_username: username
-shelly_plug_http_password: "password"
+shelly_plug_http_password: "{{ lookup('ansible.builtin.env', 'SHELLY_PLUG_PASS', '') }}"
 
 # AirGradient configuration. (Also requires `monitoring_enable`)
 airgradient_enable: false
@@ -47,3 +50,19 @@ airgradient_sensors:
 
 # Starlink configuration. (Also requires `monitoring_enable`)
 starlink_enable: false
+
+# Unbound configuration
+unbound_enable: true
+unbound_forward_domain: "cloudflare.com"
+unbound_forward_ip_primary: "1.1.1.1"
+unbound_forward_ip_secondary: "1.0.0.1"
+unbound_hostname: "unbound"
+unbound_ipv4_bind_address: "0.0.0.0"
+unbound_ipv6_bind_address: "::0"
+unbound_listen_port: 5353
+unbound_upstream_dns: "1.1.1.1"
+unbound_verbosity: 9
+
+
+# Create systemd service files on single board (Pi or Libre Computer)
+systemd_def_enable: true
