--- a/example.inventory.ini
+++ b/example.inventory.ini
@@ -1,5 +1,7 @@
 [internet_pi]
-10.0.100.52 ansible_user=pi
+# Defaulting to setting up localhost; this will most likely be the majority of use cases performing first-time setup
+# First-time users, I assume, will most likely run all of this directly on the board computer
+127.0.0.1 ansible_connection=local ansible_user=pi
 
-# Comment out the previous line and uncomment this to run inside Raspberry Pi.
-# 127.0.0.1 ansible_connection=local ansible_user=pi
+# Comment out the previous line and uncomment this to setup Raspberry Pi remotely.
+# 10.0.100.52 ansible_user=pi
