--- a/tasks/pi-hole.yml
+++ b/tasks/pi-hole.yml
@@ -22,14 +22,31 @@
     build: false
   become: false
 
-- name: Update resolveconf for local name server use.
-  ansible.builtin.lineinfile:
-    line: "name_servers=127.0.0.1"
-    dest: "/etc/resolvconf.conf"
-    regexp: "^#?name_servers="
-  register: resolvconf_file
+- name: Create resolveconf for local name server use
+  copy:
+    content: "name_servers=127.0.0.1"
+    dest: /etc/resolvconf.conf
+    force: no
+    group: sys
+    owner: root
+    mode: 0644
 
-- name: Regenerate resolvconf if file is changed.
-  ansible.builtin.command: resolvconf -u
-  changed_when: false
-  when: resolvconf_file is changed
+# Pretty sure I changed this because I am working on armbian
+# using a Libre Computer, the resolveconf file did not already exist.
+# Copying this content to a new file every time should mean we don't
+# need to regnerate, right?
+# That step was failing for me I suppose because there is no longer
+# a "resolveconf_file" that is registered due to adding the previous
+# step and disabling the next one
+
+#- name: Update resolveconf for local name server use.
+#  ansible.builtin.lineinfile:
+#    line: "name_servers=127.0.0.1"
+#    dest: "/etc/resolvconf.conf"
+#    regexp: "^#?name_servers="
+#  register: resolvconf_file
+
+# - name: Regenerate resolvconf if file is changed.
+#   ansible.builtin.command: resolvconf -u
+#   changed_when: false
+#   when: resolvconf_file is changed
