--- a/main.yml
+++ b/main.yml
@@ -53,9 +53,9 @@
       ansible.builtin.import_tasks: tasks/starlink.yml
       when: starlink_enable
 
-    - name: Setup Unbound Recursive DNS.
-      ansible.builtin.import_tasks: tasks/unbound.yml
-      when: unbound_enable
+    - name: Setup Dnsmasq Recursive DNS.
+      ansible.builtin.import_tasks: tasks/dnsmasq.yml
+      when: dnsmasq_enable
 
     - name: Create SystemD Service Files.
       ansible.builtin.import_tasks: tasks/systemd-definitions.yml
